syntax = "proto3";

option go_package = "internal/api";

import "api/google/protobuf/timestamp.proto";

service RoleLeader {
  rpc CreateFeedback (CreateFeedbackRequest) returns (CreateFeedbackResponse);
  rpc GetCall (GetCallRequest) returns (GetCallResponse);
}

message Call {
  string call_id = 1;
  string user_id = 2;
  string leader_id = 3;
  string title = 4;
  google.protobuf.Timestamp start_time = 5;
  string status = 6;
  string feedback = 7;
}

message CreateFeedbackRequest {
  string call_id = 1;
  string message = 2;
}

message CreateFeedbackResponse {
  string status = 1;
}

message GetCallRequest {
  string call_id = 1;
}

message GetCallResponse {
  Call call = 1;
}

